# Santorini

./: .gitignore  README.md  TODOs.md  game28.09.2025.san  main.py
ai/: agent.py  heuristics.py  maxn.py  mcts.py  minimax.py  move_rating.py  mtcs.py  phrases.py  rust_helpers.py
game/: board.py  config.py  models.py  moves.py  rules.py
gui/: gameplay.py  notation.py  window.py
ml/: dataset.py  encode.py  inference.py  model.py  selfplay.py  structure  symmetry_test.py  training.py
ml/datasets/: data_inspect.py
ml/training/: dataset_training.py  selfplay_training.py
rust/: .gitignore  Cargo.toml
rust/src/: board.rs  heuristics.rs  lib.rs  mcts_tree.rs
santorino/: main.py  tempCodeRunnerFile.py
santorino/santorini/: board.py  models.py  rules.py
statistics/: stat_functions.py  visualiser.py
