[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust"
crate-type = ["cdylib"] 

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
rayon = "1.10"
rand = { version = "0.9.2", features = ["small_rng"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
